Adicionado detalhes de pedido

--- a/MinhasEncomendas/Base.lproj/Main.storyboard
+++ b/MinhasEncomendas/Base.lproj/Main.storyboard
@@ -40,6 +40,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="verPedido" id="htZ-h3-q4u"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -76,7 +79,7 @@
                                 </connections>
                             </textField>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="KA9-K9-j5d">
-                                <rect key="frame" x="20" y="278" width="374" height="216"/>
+                                <rect key="frame" x="20" y="277.5" width="374" height="216"/>
                                 <connections>
                                     <action selector="previsao:" destination="l4u-t9-Vmz" eventType="valueChanged" id="pJs-cI-aqF"/>
                                 </connections>
@@ -95,14 +98,14 @@
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Descrição" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cGo-FG-tod">
                                 <rect key="frame" x="20" y="549.5" width="374" height="34"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <action selector="descricao:" destination="l4u-t9-Vmz" eventType="editingDidEnd" id="xSn-x0-sbg"/>
                                 </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Loja" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CVJ-gN-OVh">
-                                <rect key="frame" x="20" y="182" width="374" height="34"/>
+                                <rect key="frame" x="20" y="182.5" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -150,7 +153,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xc0-ly-7Dm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="l4u-t9-Vmz" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="166.66666666666669" y="56.919642857142854"/>
+            <point key="canvasLocation" x="206" y="-255"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7A4-mK-18c">
@@ -175,37 +178,37 @@
         <!--Pedido-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="UISplitViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="DetalhesViewController" customModule="MinhasEncomendas" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pedido" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZqY-aL-Dd5">
-                                <rect key="frame" x="20" y="74" width="374" height="42"/>
+                                <rect key="frame" x="20" y="118" width="374" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loja" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PV3-HP-PTx">
-                                <rect key="frame" x="20" y="121" width="374" height="30"/>
+                                <rect key="frame" x="20" y="165" width="374" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data do pedido" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r2o-jb-yzj">
-                                <rect key="frame" x="20" y="181" width="374" height="21"/>
+                                <rect key="frame" x="20" y="225" width="374" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descrição" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cTp-WJ-gUF">
-                                <rect key="frame" x="20" y="283" width="374" height="21"/>
+                                <rect key="frame" x="20" y="327" width="374" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Previsão de entrega" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="laR-6i-4sD">
-                                <rect key="frame" x="20" y="232" width="374" height="21"/>
+                                <rect key="frame" x="20" y="276" width="374" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -236,10 +239,17 @@
                     <navigationItem key="navigationItem" title="Pedido" id="2m3-G0-rfi">
                         <barButtonItem key="rightBarButtonItem" title="Editar" image="pencil" catalog="system" id="ItA-dV-EQ9"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="data" destination="r2o-jb-yzj" id="TeO-Z1-1jb"/>
+                        <outlet property="descricao" destination="cTp-WJ-gUF" id="JsF-U6-luf"/>
+                        <outlet property="loja" destination="PV3-HP-PTx" id="Bmz-gx-eXo"/>
+                        <outlet property="pedido" destination="ZqY-aL-Dd5" id="Y24-Ih-bkl"/>
+                        <outlet property="previsao" destination="laR-6i-4sD" id="KJq-f6-FEb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="891" y="57"/>
+            <point key="canvasLocation" x="206" y="418"/>
         </scene>
     </scenes>
     <resources>
